--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Recipes</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <a href="./recipes/pizza.html">Lavish Pizza</a>
 </body>
 </html>
