--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Lavish Pizza</a>
+    <ul>
+        <li><a href="./recipes/pizza.html">Lavish Pizza</a></li>
+        <li><a href="./recipes/soup.html">Hydrating Soup</a></li>
+    </ul>
 </body>
 </html>
