add sandwhich recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./recipes/pizza.html">Lavish Pizza</a></li>
         <li><a href="./recipes/soup.html">Hydrating Soup</a></li>
+        <li><a href="./recipes/sandwhich.html">Knuckle Sandwhich</a></li>
     </ul>
 </body>
 </html>
