--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/pizza.html">Lavish Pizza</a></li>
-        <li><a href="./recipes/soup.html">Hydrating Soup</a></li>
-        <li><a href="./recipes/sandwhich.html">Knuckle Sandwhich</a></li>
-    </ul>
+    <div id="recipes">
+        <ul>
+            <li><a href="./recipes/pizza.html">Lavish Pizza</a></li>
+            <li><a href="./recipes/soup.html">Hydrating Soup</a></li>
+            <li><a href="./recipes/sandwhich.html">Knuckle Sandwhich</a></li>
+        </ul>
+    </div>
 </body>
 </html>
